# atdd-extensions

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WORKER_BRIEF.md
.github/workflows/: validate-packages.yml
docs/: CORE-PARITY-MATRIX.md  FRONTEND-PARITY-MATRIX.md  MIRROR-GAP-ASSIGNMENT.md
docs/coder-tester-extension-decomposition/: DESIGN.md  PHASE0-PROOF.md  PHASE05-PROOF.md  PROVIDER-CONTRACT-v1.1.md  SCAFFOLD-REVIEW.md  TESTER-ACCOUNTING.md  tester-ext-edges.yaml  wave1-c1-edges.yaml  wave1-c2-edges.yaml  wave1-c3-edges.yaml  wave2-c1-edges.yaml  wave2-c2-edges.yaml  wave2-c3-edges.yaml  wave2-c4-edges.yaml
docs/mirror-classification/: W1.md  W10.md  W11.md  W2.md  W3.md  W4.md  W5.md  W6.md  W7.md  W8.md  W9.md  WT.md
examples/component-header-validator/: README.md  atdd.extension.yaml
examples/minimal-extension/: README.md  atdd.extension.yaml
official/atdd.extension.coder/: README.md  atdd.extension.yaml  relationships.yaml
official/atdd.extension.convex-coder/: PORTING-PLAN.md  README.md  atdd.extension.yaml  relationships.yaml
official/atdd.extension.convex-tester/: README.md  atdd.extension.yaml  relationships.yaml
official/atdd.extension.github/: README.md  atdd.extension.yaml  relationships.yaml
official/atdd.extension.python-pytest/: README.md  atdd.extension.yaml
official/atdd.extension.tester/: README.md  atdd.extension.yaml  relationships.yaml
official/atdd.workspace.cmux-claude/: README.md  (+2 more)
official/atdd.workspace.python-pytest/runtime/: pyproject.toml  pytest.ini  requirements-dev.txt
registry/: README.md  registry.yaml
(+1359 files in other folders)
